--- a/style.css
+++ b/style.css
@@ -57,19 +57,19 @@ img {
 .errorShow{
   background-color:#007BFF!important;
   padding:30px!important;
-  border-radius:15px;
+  border-radius:15px!important;
 }
 .errorShow:hover{
-  background-color:ghostwhite;
+  background-color:ghostwhite!important;
 }
 #imageSelect:hover{
-  background-color:ghostwhite;
+  background-color:ghostwhite!important;
 }
 #imageSelect{
   display:none;
   background-color:#007BFF!important;
   padding:30px!important;
-  border-radius:15px;
+  border-radius:15px!important;
 }
 
 
